# nomnom

./: .editorconfig  .gitignore  Cargo.toml  HSK-2012.csv  README.md  hsk.csv
.github/workflows/: build.yaml  ci.yaml
dodo/: Cargo.toml
dodo-zh/: Cargo.toml
dodo-zh/examples/: dodo.rs  pinyin.rs
dodo-zh/src/: cedict.rs  converter.rs  error.rs  lib.rs  variant.rs  wade_giles.rs  zhuyin.rs
dodo-zh/src/pinyin/: accent.rs  mod.rs  numbers.rs
dodo/examples/: pinyin.rs
dodo/src/: cedict.rs  error.rs  lib.rs  pinyin_accent.rs  wade_giles.rs
dodo/src/static/: zhuyin.json
nado/: Cargo.toml
nado/src/: main.rs  progress.rs  util.rs
nado/src/cmd/: download.rs  generate.rs  mod.rs
nado/src/hsk/: mandarinbean.rs  mod.rs  wohok.rs
scrapper/: scrapper.py
src/: cedict.rs  error.rs  hsk.rs  indic.rs  log.rs  main.rs  util.rs
src/pinyin/: mod.rs
src/wade_giles/: mod.rs
src/zhuyin/: initials.rs  mod.rs
static/: cedict_sample_ts.u8  hsk_test.csv
