[package]
name = "nomnom"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
csv = "1.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
indicatif = "0.17.3"
