[package]
name = "dodo-zh"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "utility to manipulate the cedict dictionary and pinyin"
repository = "https://github.com/shigedangao/nomnom/tree/main/dodo"
authors = ["Marc Intha-amnouay <marc.inthaamnouay@gmail.com>"]
readme = "../README.md"
keywords = ["chinese", "cedict", "pinyin", "zhuyin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-normalization = "0.1.23"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[[example]]
name = "pinyin"
