[package]
name = "nado"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4", features = ["derive"] }
dodo = { version = "0.1.0", path = "../dodo" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3.0"
scraper = "0.18.1"
tokio = { version = "1.34.0", features = ["full"] }
async-trait = "0.1.74"
reqwest = "0.11.22"
indicatif = "0.17.7"
