[package]
name = "nado"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.17", features = ["derive"] }
dodo-zh = { version = "0.1.2", path = "../dodo-zh" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
csv = "1.3.0"
scraper = "0.20.0"
tokio = { version = "1.40.0", features = ["full"] }
reqwest = { version = "0.12.7", features = ["stream"] }
indicatif = "0.17.8"
tempfile = "3.12.0"
futures-util = { version = "0.3.30", default-features = false }
